# final_year_clgproject

./: .env.example  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.yml  download_data.py  evaluate.py  fix_db.py  organise_dataset.py  pyproject.toml  requirements.txt  setup.py  train.py
.streamlit/: config.toml
backend/: auth.py  dependencies.py  main.py  schemas.py
backend/migrations/versions/: a6426cdb9721_baseline_schema.py
backend/routes/: __init__.py  auth.py  contact.py  detect.py  encyclopedia.py  history.py
checkpoints/: class_names.json
core/: disease_info.py  i18n.py  inference.py
data/: dataset.py  transforms.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.jsx  index.css
frontend/src/components/: ErrorBoundary.jsx  ErrorBoundary.module.css  Footer.jsx  Footer.module.css  Navbar.jsx  Navbar.module.css
frontend/src/context/: AuthContext.jsx
frontend/src/pages/: Analytics.jsx  Analytics.module.css  AuthPage.jsx  AuthPage.module.css  Contact.jsx  Contact.module.css  Detection.jsx  Detection.module.css  Encyclopedia.jsx  Encyclopedia.module.css  History.jsx  Home.jsx  (+2 more)
models/: __init__.py
pages/: about.py  analytics.py  contact.py  detection.py  encyclopedia.py  history.py  home.py
tests/: test_api.py  test_auth.py  test_database.py  test_dataset.py  test_disease_db.py  test_pdf_report.py
tools/: build_mini_dataset.py  create_placeholders.py  download_pretrained.py
translations/: en.json  hi.json  te.json
utils/: database.py  email.py  gradcam.py  image_utils.py  logging_config.py  metrics.py  report.py
(+1 files in other folders)
